fixed page spacing

--- a/AmherstGolfClub/Content/Site.css
+++ b/AmherstGolfClub/Content/Site.css
@@ -5,7 +5,7 @@
 .body-content {
     padding-left:109px;
     margin-left: 100px;
-    max-width: 85%; 
+    max-width: 115%; 
 }
 
 .dl-horizontal dt {
@@ -44,7 +44,7 @@
 
 /************************************FOOTER******************************************/
 footer{
-    width:1100px;
+    width:100%;
     border-top: 2px solid rgba(81, 80, 80, 0.76);
 }
 
